tests/files/type_checker_tests/should_fail/057.cmdr
//Should fail if bindings don't match
fn foo(x: int, y: float): bool {
    return x && y;
}
